# ESP32-CSI-Tool

./: .gitignore  pyproject.toml  test.py
active_sta/: .gitignore
active_sta/prepared_data/: classes.npy  global_mean.npy  global_std.npy  y_train.npy  y_val.npy
active_sta/pythonn/: save_data.py  serial_plot_csi_live.py
active_sta/work/pythonn/: collecting_data.py  prepare_data.py  realTime_pred.py  test.py  train_lstm.py
python_utils/: serial_plot_csi_live.py
